# tgbot

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  sample.env  search-index.js  settings.html  src-files.js
aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
async_stream/: all.html  index.html  macro.stream.html  macro.try_stream.html  sidebar-items.js
async_stream_impl/: all.html  index.html
async_trait/: all.html  attr.async_trait.html  index.html
atomic_waker/: all.html  index.html  struct.AtomicWaker.html
aws_lc_rs/: all.html  fn.init.html  fn.try_fips_cpu_jitter_entropy.html  fn.try_fips_mode.html  index.html  macro.test_file.html  sidebar-items.js
aws_lc_sys/: all.html  constant.AES_BLOCK_SIZE.html  constant.AES_DECRYPT.html  constant.AES_ENCRYPT.html  constant.AES_MAXNR.html  constant.AWSLC_API_VERSION.html  constant.AWSLC_FIPS_VERSION_NUMBER.html  constant.AWSLC_VERSION_NAME.html  constant.AWSLC_VERSION_NUMBER_STRING.html  constant.BN_BITS2.html  constant.BN_DEC_FMT1.html  constant.BN_FLG_MALLOCED.html  constant.BN_FLG_STATIC_DATA.html  constant.BN_F_BN_GENERATE_PRIME_EX.html  constant.BN_GENCB_GENERATED.html  constant.BN_GENCB_PRIME_TEST.html  constant.BN_HEX_FMT1.html  constant.BN_HEX_FMT2.html  constant.BN_RAND_BOTTOM_ANY.html  constant.BN_RAND_BOTTOM_ODD.html  constant.BN_RAND_TOP_ANY.html  constant.BN_RAND_TOP_ONE.html  constant.BN_RAND_TOP_TWO.html  constant.BN_R_ARG2_LT_ARG3.html  constant.BN_R_BAD_ENCODING.html  constant.BN_R_BAD_RECIPROCAL.html  constant.BN_R_BIGNUM_TOO_LONG.html  constant.BN_R_BITS_TOO_SMALL.html  constant.BN_R_CALLED_WITH_EVEN_MODULUS.html  constant.BN_R_DIV_BY_ZERO.html  constant.BN_R_ENCODE_ERROR.html  constant.BN_R_EXPAND_ON_STATIC_BIGNUM_DATA.html  constant.BN_R_INPUT_NOT_REDUCED.html  constant.BN_R_INVALID_INPUT.html  constant.BN_R_INVALID_RANGE.html  constant.BN_R_NEGATIVE_NUMBER.html  constant.BN_R_NOT_A_SQUARE.html  constant.BN_R_NOT_INITIALIZED.html  constant.BN_R_NO_INVERSE.html  constant.BN_R_PRIVATE_KEY_TOO_LARGE.html  (+4180 more)
axum/: all.html  fn.serve.html  index.html  struct.Error.html  struct.Extension.html  struct.Form.html  struct.Json.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
axum_core/: all.html  index.html  struct.Error.html  trait.RequestExt.html  trait.RequestPartsExt.html  type.BoxError.html
base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  struct.TryGetError.html
cfg_if/: all.html  index.html  macro.cfg_if.html
convert_case/: all.html  enum.Case.html  index.html  struct.FromCasing.html  trait.Casing.html
darling/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  struct.Error.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html  type.Result.html
darling_core/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  trait.FromAttributes.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_macro/: all.html  index.html  (+7 more)
(+43710 files in other folders)
