[package]
name = "tgbot"
description = "A Telegram Bot library"
version = "0.34.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/tgbot"
repository = "https://github.com/tg-rs/tgbot"

[features]
webhook = ["dep:axum"]

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", optional = true }
bytes = "1.10"
derive_more = { version = "2.0", features = ["from"] }
futures-util = "0.3"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "socks", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", default-features = false, features = ["macros"] }
shellwords = "1.1"
tokio = { version = "1.43", features = ["fs", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.11"
mockito = "1.6"
pretty_assertions = "1.4"
regex = "1.11"
tempfile = "3.16"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.8"

[[example]]
name = "webhook"
required-features = ["webhook"]

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(nightly)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "nightly"]
